# lotamate-skill

./: .gitignore  .npmignore  LICENSE  README.md  package.json  skill.json
python/: pyproject.toml  setup.py
python/lotamate/: __init__.py  skill.py
